[project]
name = "knowledgebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6.4",
    "mkdocs>=1.6.1",
    "pre-commit>=4.1.0",
    "mdformat-gfm>=0.4.1",
    "mdformat-tables>=1.0.0",
    "mdformat-black>=0.1.1",
    "mdformat-mkdocs[recommended]>=4.1.2",
]
